# pytest-loco-http

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: checkup.yml  publish.yml
src/pytest_loco_http/: __init__.py  actions.py  instructions.py  models.py  plugin.py  sessions.py  user_agent.py
src/pytest_loco_http/schema/: __init__.py  cookies.py  files.py  requests.py  urls.py
tests/: __init__.py  test_base_actions.yaml
